@@ -13,6 +13,10 @@ Limitations:
 
 
 Revision History:
+24-Jun-2004
+   Problems fixed:
+       1. bug #978770 Clicking on a button outside of a form is now supported
+
 23-Jun-2004
    Problems fixed:
        1. bug #974380 When using a DNS listener, host header no longer includes ':-1' if the port is not specified
